--- a/index.html
+++ b/index.html
@@ -33,56 +33,57 @@
     <button id="header">Conect</button>
   </header>
   <div id="main_image_wraper">
-    <img src="./assets/hansung01.png" alt="">
+    <img src="./assets/hansung01.png" alt="" class="hansungImg">
+    <img src="./assets/pngegg.png" alt="" class="crossImg">
+    <img src="./assets/nowon.png" alt="" class="nowonImg">
   </div>
   <div id="main_text">
-    <p>김지용<br>나를 따라라.</p>
+    <p>Play Ground<br>In NOWON</p>
   </div>
   <div id="join_us_wrapper">
-    <div id="join_us">join us</div>
+    <div id="join_us">join in</div>
     <div id="join_us" class="material-symbols-outlined">
       expand_more
     </div>
   </div>
-  <main>
+  <main id="main_list">
     <ul id="item_container">
-      <li class="item">밥먹기</li>
-      <li class="item">고기먹기</li>
-      <li class="item">고기고기먹기</li>
-      <li class="item">넷플릭스보기</li>
-      <li class="item">디즈니보기</li>
-      <li class="item">밥먹기</li>
-      <li class="item">고기먹기</li>
-      <li class="item">고기고기먹기</li>
-      <li class="item">넷플릭스보기</li>
-      <li class="item">디즈니보기</li>
-      <li class="item">밥먹기</li>
-      <li class="item">고기먹기</li>
-      <li class="item">고기고기먹기</li>
-      <li class="item">넷플릭스보기</li>
-      <li class="item">디즈니보기</li>
-      <li class="item">밥먹기</li>
-      <li class="item">고기먹기</li>
-      <li class="item">고기고기먹기</li>
-      <li class="item">넷플릭스보기</li>
-      <li class="item">디즈니보기</li>
+      <li class="item">경춘선숲길</li>
+      <li class="item">공릉동 도깨비시장</li>
+      <li class="item">화랑대 철도공원</li>
+      <li class="item">육군사관학교</li>
+      <li class="item">서울생활사박물관</li>
+      <li class="item">서울시립 북서울미술관</li>
+      <li class="item">학림사</li>
+      <li class="item">학도암</li>
+      <li class="item">도안사</li>
+      <li class="item">육군사관학교 육군박물관</li>
+      <li class="item">노원천문우주과학관</li>
+      <li class="item">노원불빛정원</li>
+      <li class="item">노원수학문화관</li>
+      <li class="item">불암산나비정원</li>
+      <li class="item">서울시립과학관</li>
+      <li class="item">중계근린공원</li>
+      <li class="item">하계어린이공원</li>
+      <li class="item">당현천근린공원</li>
+      <li class="item">조선왕릉전시관</li>
+      <li class="item">불암산 둘레길</li>
+      <li class="item">노원 문화의거리</li>
+      <li class="item">불암산 철쭉동산</li>
+      <li class="item">104마을</li>
     </ul>
   </main>
-  <div id="circle_image_wrapper">
-    <div id="cicle_image">
-      <img src="./assets/kakao_logo.png" alt="">
-    </div>
-  </div> 
+  
   <section class="poster">
     <div class="poster_parallax">
       <div id="poster_image_wrapper1" class="poster_image_wrapper">
-        <img id="poster_image1" src="./assets/laboom.jpeg" alt="" class="poster_image" >
+        <img id="poster_image1" src="./assets/철쭉동산.jpeg" alt="" class="poster_image" >
       </div>
     <div id="poster_image_wrapper2" class="poster_image_wrapper">
-      <img id="poster_image2" src="./assets/laboom.jpeg" alt="" class="poster_image" >
+      <img id="poster_image2" src="./assets/경춘선기차.png" alt="" class="poster_image" >
     </div>
     <div id="poster_image_wrapper3" class="poster_image_wrapper">
-      <img id="poster_image3" src="./assets/laboom.jpeg" alt="" class="poster_image" >
+      <img id="poster_image3" src="./assets/경춘선숲길.png" alt="" class="poster_image" >
     </div>
     </div>
     
